--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,12 @@ body {
 h1, h2, h3, h4 {
   font-weight: normal;
 }
+
+.example-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.example-container > * {
+  width: 50%;
+}
