--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,11 +23,16 @@ h1, h2, h3, h4 {
   font-weight: normal;
 }
 
+.example-card {
+  max-width: 500px;
+}
+
 .example-container {
   display: flex;
   flex-direction: column;
+  margin-left: 30px;
 }
 
 .example-container > * {
-  width: 50%;
+  width: 80%;
 }
