Pantalla Login Def.

--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -1,14 +1,14 @@
 <mat-grid-list cols="2">
 
-  <mat-grid-tile style="background:cornflowerblue">ESTO ES LA COLUMNA DE LA DE IZQUIERDA</mat-grid-tile>
+  <mat-grid-tile style="background:lightgray">
+    <img src="https://www.escura.com/wp-content/uploads/2018/04/ico_farmacia-300x300.png">
+  </mat-grid-tile>
   
   <mat-grid-tile>
     <mat-card class="example-card">
         <mat-card-header>
             <mat-card-title>Login</mat-card-title>
         </mat-card-header>
-
-        <img mat-card-image style="width:200px;height:200px;" src="https://aumentada.net/wp-content/uploads/2015/05/user.png" alt="Imagen login">
 
         <mat-card-content>
           <div class="example-container">
