--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container main-container">
-    <app-login-form></app-login-form>
-</div>
-<app-navbar></app-navbar>
+
+<app-login-form></app-login-form>
+
+<!--<app-navbar></app-navbar>-->
