--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -1,31 +1,85 @@
-<mat-grid-list cols="2">
+<header style="height: 100vh">
+  <section class="view" style="height: 100vh">
+      <div class="row" style="height: 100vh">
 
-  <mat-grid-tile style="background:lightgray">
-    <img src="https://www.escura.com/wp-content/uploads/2018/04/ico_farmacia-300x300.png">
-  </mat-grid-tile>
-  
-  <mat-grid-tile>
-    <mat-card class="example-card">
-        <mat-card-header>
-            <mat-card-title>Login</mat-card-title>
-        </mat-card-header>
-
-        <mat-card-content>
-          <div class="example-container">
-            <mat-form-field>
-              <input matInput placeholder="Usuario">
-            </mat-form-field>
-
-            <mat-form-field>
-              <input matInput placeholder="Contraseña">
-            </mat-form-field>
+        <div class="col-md-4" style="background-image:linear-gradient(to right, #2bbbad 0%, #1fc8db 51%, #2cb5e8 75%)">
+          <div class="d-flex flex-column justify-content-center align-items-center h-100">
+            <h1 class="heading display-3">Farmadosis</h1>
+            <h4 class="subheading font-weight-bold">Soluciones farmacológicas</h4>
           </div>
-        </mat-card-content>
+        </div>
+  
+        <div class="col-md-8">
+  
+          <div class="view" style="height: 100vh">
 
-      <mat-card-actions>
-        <button mat-raised-button>Iniciar sesión</button>
-      </mat-card-actions>
-    </mat-card>
-</mat-grid-tile>
+            <div class="row" style="height: 100vh">
 
-</mat-grid-list>
+              <div class=" offset-md-4 col-md-6" style=" margin: 0 auto; display: flex; flex-direction: column; justify-content: center">
+
+                <!-- Material form login -->
+                <div class="card" >
+
+                    <h5 class="card-header info-color white-text text-center py-4">
+                      <strong>Iniciar Sesión</strong>
+                    </h5>
+                  
+                    <!--Card content-->
+                    <div class="card-body px-lg-5 pt-0">
+                  
+                      <!-- Form -->
+                      <form class="text-center" style="color: #757575;">
+                  
+                        <!-- Email -->
+                        <div class="md-form">
+                          <input type="email" id="materialLoginFormEmail" class="form-control">
+                          <label for="materialLoginFormEmail">E-mail</label>
+                        </div>
+                  
+                        <!-- Password -->
+                        <div class="md-form">
+                          <input type="password" id="materialLoginFormPassword" class="form-control">
+                          <label for="materialLoginFormPassword">Contraseña</label>
+                        </div>
+                  
+                        <div class="d-flex justify-content-around">
+                          <div>
+                            <!-- Remember me -->
+                            <div class="form-check">
+                              <input type="checkbox" class="form-check-input" id="materialLoginFormRemember">
+                              <label class="form-check-label" for="materialLoginFormRemember">Recuérdame</label>
+                            </div>
+                          </div>
+                          <div>
+                            <!-- Forgot password -->
+                            <a href="">¿Olvidaste la contraseña?</a>
+                          </div>
+                        </div>
+                  
+                        <!-- Sign in button -->
+                        <button class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" type="submit">Iniciar Sesión</button>
+                  
+                        <!-- Register -->
+                        <p>¿No tienes usuario?
+                          <br>
+                          <a href="">Ponte en contacto con el administrador</a>
+                        </p>
+                  
+                      </form>
+                      <!-- Form -->
+                  
+                    </div>
+                  
+                  </div>
+                  <!-- Material form login -->
+              </div>
+            </div>
+
+          </div>
+  
+        </div>
+  
+      </div>
+  
+    </section>
+</header>
