--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,10 @@ html, body {
     height: auto;
     margin: 0;
   }
+
+/* RGB */
+$color1: rgba(80, 255, 177, 1);
+$color2: rgba(79, 178, 134, 1);
+$color3: rgba(60, 137, 109, 1);
+$color4: rgba(84, 109, 100, 1);
+$color5: rgba(77, 104, 90, 1);
