--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 
 <!-- Si no está logueado-->
-<app-login-form *ngIf="!logueado"></app-login-form>
+<!--<app-login-form *ngIf="!logueado"></app-login-form>
 
-<app-navbar *ngIf="logueado"></app-navbar>
+<app-navbar *ngIf="logueado"></app-navbar>-->
+
+<router-outlet></router-outlet>
