--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -4,7 +4,7 @@
 
         <div class="col-md-4 side-login">
           <div class="d-flex flex-column justify-content-center align-items-center h-100">
-            <h1 class="heading display-3">Farmadosis</h1>
+            <h1 class="heading display-3">Pharmagest</h1>
             <h4 class="subheading font-weight-bold">Soluciones farmacológicas</h4>
           </div>
         </div>
