--- a/src/app/components/shared/navbar/navbar.component.scss
+++ b/src/app/components/shared/navbar/navbar.component.scss
@@ -37,3 +37,9 @@
 .close-session{
     margin-top: 15px;
 }
+
+.aqua-gradient {
+	background: -webkit-linear-gradient(50deg,#2bbbad,#2eaee9) !important;
+	background: -o-linear-gradient(50deg,#2bbbad,#2eaee9) !important;
+	background: linear-gradient(40deg,#2bbbad,#2eaee9) !important;
+}
