--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -3,9 +3,9 @@
 
     <!-- Navbar brand -->
     
-    <mdb-navbar-brand>
+    <mdb-navbar-brand >
       <img class="icon-brand" src="../../../assets/hospital.svg">
-      <a class="navbar-brand" href="#">Farmadosis</a>
+      <a class="navbar-brand" href="#">Pharmagest</a>
     </mdb-navbar-brand>
   
     <!-- Collapsible content -->
@@ -37,16 +37,16 @@
         <!-- Dropdown -->
         <li class="nav-item dropdown" dropdown>
           <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-            Bienvenido, Miguel  <span class="caret"></span></a>
+            Bienvenido, {{User?.Nombre}}  <span class="caret"></span></a>
           <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" style="width:350px">
             <div class="row">
               <div class="col-md-4" style="margin-left: 20px">
-                  <img src="../../../assets/user.jpg" alt="" class="img-fluid rounded-circle z-depth-0">
+                  <img src="{{User?.img}}" alt="" class="img-fluid rounded-circle z-depth-0">
               </div>
               <div class="col-md-7 vcenter">
-                  <h5>Miguel</h5>
-                  <h5>De Arriba Moreno</h5>
-                  <span>Farmaceútico</span>
+                  <h5>{{User?.Nombre}}</h5>
+                  <h5>{{User?.Apellidos}}</h5>
+                  <span>{{User?.rol}}</span>
               </div>
             </div>
             <div class="divider dropdown-divider"></div>
@@ -64,7 +64,7 @@
             </div>
             <div class="row close-session">
               <div class="col-md-12 hcenter">
-                <button mdbBtn type="button" gradient="aqua" rounded="true" size="sm" data-toggle="modal" data-target="#basicExample" (click)="frame.show()" mdbWavesEffect>
+                <button mdbBtn type="button" class="aqua-gradient" rounded="true" size="sm" data-toggle="modal" data-target="#basicExample" (click)="frame.show()" mdbWavesEffect>
                     <mdb-icon fas icon="sign-out-alt" class="mr-1"></mdb-icon>Cerrar Sesión
                 </button>
               </div>
@@ -91,14 +91,14 @@
 
       <!--Body-->
       <div class="modal-body">
-        <h5><b>Vas a salir de la aplicación</b></h5>
+        <h5><b>{{User?.Nombre}} vas a salir de la aplicación</b></h5>
         <h5>¿Estás seguro de que quieres salir?</h5>
         <i style="color:#2bbbad" class="fas fa-times fa-4x animated rotateIn"></i>
       </div>
 
       <!--Footer-->
       <div class="modal-footer justify-content-center">
-        <a mdbBtn color="default" outline="true" class="waves-effect" mdbWavesEffect>Si</a>
+        <a mdbBtn color="default" outline="true" class="waves-effect" mdbWavesEffect (click)="closeSession()">Si</a>
         <a type="button" mdbBtn color="default" outline="true" class="waves-effect" mdbWavesEffect data-dismiss="modal" (click)="frame.hide()">No</a>
       </div>
     </div>
