--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,11 +1,14 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark default-color lighten-1" [containerInside]="false">
+<mdb-navbar SideClass="navbar navbar-expand-md navbar-dark default-color scrolling-navbar fixed-top" [containerInside]="false">
 
     <!-- Navbar brand -->
     
     <mdb-navbar-brand >
-      <img class="icon-brand" src="../../../assets/hospital.svg">
-      <a class="navbar-brand" href="#">Pharmagest</a>
+      
+      <a class="navbar-brand icon-brand">
+        <img src="../../../assets/hospital.svg" height="30" class="d-inline-block align-top">
+        Pharmagest
+      </a>
     </mdb-navbar-brand>
   
     <!-- Collapsible content -->
