--- a/src/app/components/shared/navbar/navbar.component.scss
+++ b/src/app/components/shared/navbar/navbar.component.scss
@@ -4,10 +4,7 @@
 }
 
 .icon-brand{
-    margin-right: 10px;
-    width: 40px;
-    height: 40px;
-    margin-top: -5px;
+    color: white !important;
 }
 
 .vcenter{
