Pantalla de residencias finalizada con rutas y pacientes sin eliminar

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-md navbar-dark default-color scrolling-navbar fixed-top" [containerInside]="false">
+<mdb-navbar SideClass="navbar navbar-expand-md navbar-dark default-color fixed-top" [containerInside]="false">
 
     <!-- Navbar brand -->
     
