--- a/src/app/components/lista-residencias/lista-residencias.component.html
+++ b/src/app/components/lista-residencias/lista-residencias.component.html
@@ -8,7 +8,7 @@
 
   <hr>
   
-  <div class="card mb-3 select-card" mdbWavesEffect *ngFor="let res of Residencias"> 
+  <div class="card mb-3 select-card" mdbWavesEffect *ngFor="let res of Residencias" (click)="loadPacientes(res)"> 
     <div class="row">
       <div class="col-md-3" >
         <div class="img" [ngStyle]="loadImage(res)"></div>
