--- a/src/app/components/paciente/paciente.component.html
+++ b/src/app/components/paciente/paciente.component.html
@@ -1,16 +1,26 @@
-<div class="container-fluid">
+<app-navbar></app-navbar>
+
+<div class="container" style="margin-top:120px">
+
 
   <div class="row pt-4">
 
-    <div class="col-md-6" style="align-self: center;">
+    <!-- <div class="col-md-6" style="align-self: center;">
       <i class="fas fa-chevron-left fa-2x"></i>Detalle: nombre de paciente
+    </div> -->
+    <div class="col-md-6"style="align-self: center;">
+
+      <a style="display:flex; color: grey" (click)="loadListaPacientes()">
+        <mdb-icon size="2x" fas icon="chevron-left" class="mr-2"></mdb-icon>
+        <h5 class="mt-1">Paciente {{paciente?.Nombre}} {{paciente?.Apellidos}}</h5>
+      </a>
+
     </div>
 
     <div class="col-md-6 text-right">
-      <button type="button" class="btn btn-outline-danger btn-rounded" mdbWavesEffect data-toggle="modal" data-target="#basicExample"
-      (click)="frame.show()"><i
-          class="far fa-trash-alt"></i> Dar de baja</button>
-      <button type="button" class="btn btn-outline-primary btn-rounded" mdbWavesEffect><i class="far fa-edit"></i> Editar
+      <button mdbBtn size="sm" type="button" class="btn btn-outline-danger btn-rounded" mdbWavesEffect data-toggle="modal" data-target="#basicExample"
+      (click)="frame.show()"><i class="far fa-trash-alt"></i> Dar de baja</button>
+      <button mdbBtn size="sm" type="button" rounded=true class="btn btn-outline-default btn-rounded" mdbWavesEffect disabled><i class="far fa-edit"></i> Editar
         paciente</button>
     </div>
 
@@ -24,7 +34,7 @@
 
       <!-- Card header -->
       <div class="card-header" role="tab" id="headingTratamiento">
-        <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseTratamiento" aria-expanded="true"
+        <a data-toggle="collapse" href="#collapseTratamiento" aria-expanded="true"
           aria-controls="collapseTratamiento">
           <h5 class="mb-0">
             Panel de tratamiento <i class="fas fa-angle-down rotate-icon"></i>
@@ -45,12 +55,12 @@
                 <!-- Nombre y tipo de toma-->
                 <div class="col-md-5">
                   <div class="md-form">
-                    <input mdbInput type="text" id="inputNombre" class="form-control" disabled>
+                    <input mdbInput type="text" id="inputNombre" class="form-control" value = "{{paciente.Nombre}} {{paciente.Apellidos}}" disabled>
                     <label for="inputNombre" class="">Nombre</label>
                   </div>
 
                   <div class="md-form">
-                    <input mdbInput type="text" id="inputTipoToma" class="form-control" disabled>
+                    <input mdbInput type="text" id="inputTipoToma" class="form-control" disabled value="Semanal" >
                     <label for="inputTipoToma" class="">Tipo de toma</label>
                   </div>
                 </div>
@@ -58,12 +68,12 @@
                 <!-- Fechas de inicio y fin -->
                 <div class="col-md-5">
                   <div class="md-form">
-                    <input mdbInput type="date" id="inputInicioToma" class="form-control" disabled>
+                    <input mdbInput type="text" id="inputInicioToma" class="form-control" disabled value="{{paciente.Inicio_toma}}">
                     <label for="inputInicioToma" class="">Inicio de toma</label>
                   </div>
 
                   <div class="md-form">
-                    <input mdbInput type="date" id="inputFinToma" class="form-control" disabled>
+                    <input mdbInput type="text" id="inputFinToma" class="form-control" disabled value="{{paciente.Fin_toma}}">
                     <label for="inputFinToma" class="">Fin de toma</label>
                   </div>
                 </div>
@@ -71,7 +81,7 @@
                 <!-- Chechbox -->
                 <div class="col-md-2 align-self-center">
                   <div class="custom-control custom-checkbox mb-5">
-                    <input type="checkbox" class="custom-control-input" id="chbxEmblistable" disabled>
+                    <input type="checkbox" class="custom-control-input" id="chbxEmblistable" disabled checked>
                     <label class="custom-control-label" for="chbxEmblistable">Emblistable</label>
                   </div>
 
@@ -113,7 +123,7 @@
 
       <!-- Card header -->
       <div class="card-header" role="tab" id="headingPosologia">
-        <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapsePosologia"
+        <a class="collapsed" data-toggle="collapse" href="#collapsePosologia"
           aria-expanded="false" aria-controls="collapsePosologia">
           <h5 class="mb-0">
             Posología <i class="fas fa-angle-down rotate-icon"></i>
@@ -122,8 +132,7 @@
       </div>
 
       <!-- Días de la semana -->
-      <div id="collapsePosologia" class="collapse" role="tabpanel" aria-labelledby="headingPosologia"
-        data-parent="#accordionEx">
+      <div id="collapsePosologia" class="collapse" role="tabpanel" aria-labelledby="headingPosologia">
         <div class="card-body">
           <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -226,7 +235,7 @@
       <!--Footer-->
       <div class="modal-footer justify-content-center">
         <a mdbBtn color="danger" outline="true" class="waves-effect" (click)="frame.hide()" mdbWavesEffect>Cancelar</a>
-        <a type="button" mdbBtn color="danger" class="waves-effect" mdbWavesEffect data-dismiss="modal">Confirmar</a>
+        <a type="button" mdbBtn color="danger" class="waves-effect" mdbWavesEffect data-dismiss="modal" (click)="removePaciente()">Confirmar</a>
       </div>
     </div>
     <!--/.Content-->
