--- a/src/app/components/lista-residencias/lista-residencias.component.html
+++ b/src/app/components/lista-residencias/lista-residencias.component.html
@@ -2,7 +2,9 @@
 
 <app-navbar></app-navbar>
 
-<div class="container" style="margin-top:80px">
+<app-buscador></app-buscador>
+
+<div class="container  animated fadeIn fast" style="margin-top:20px">
 
   <h4>Listado de residencias</h4>
 
